--- a/app/globals.css
+++ b/app/globals.css
@@ -32,13 +32,14 @@ body {
   }
 }
 
-.moveDownClass{
+.moveDownClass {
   position: absolute;
-  animation: shiftToDown 10s linear;
+  animation: shiftToDown 10s linear forwards;
 }
+
 @keyframes shiftToDown {
   from {
-    /* right: 0px; */
+    
   }
   to {
     top: 2000px;
